src/main/java/com/example/appointment_scheduler/error/UserAlreadyExistsException.java
package com.example.appointment_scheduler.error;

public class UserAlreadyExistsException extends Exception{
    public UserAlreadyExistsException(String message) {
        super(message);
    }
    
}